argocon-demos/2026-dont-do-what-donny-dont-does-the-10-dos-and-500-donts-of-workflows-success/examples/tailscale-secure-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name:  argo-workflows-server
 namespace: argo
spec:
 ingressClassName: tailscale
 tls:
   - hosts:
       - argo-workflows-server # The desired MagicDNS name
 rules:
 - http:
     paths:
     - path: /
       pathType: Prefix
       backend:
         service:
           name: argo-workflows-server 
           port:
             number: 2746
